kubernetes/keycloak/manifest/deployment.yml
# app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app
  namespace: my-keycloak
  labels:
    app: keycloak-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:legacy
        # image: quay.io/keycloak/keycloak:latest
        command: ['sh', '-c', '/opt/jboss/tools/docker-entrypoint.sh']
        ports:
          - containerPort: 8080
        resources: {}
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
 name: keycloak-app-svc
 namespace: my-keycloak
spec:
  clusterIP: None
  selector:
    app: keycloak-app
  ports:
    - protocol: TCP
      port: 8080

# db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: my-keycloak
  labels:
    app: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: keycloak-db
          image: mysql/mysql-server:8.0.32-1.2.11-server
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - name: keycloak-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-db-pvc

---
kind: Service
apiVersion: v1
metadata:
 name: keycloak-db-svc
 namespace: my-keycloak
spec:
  clusterIP: None
  selector:
    app: keycloak-db
  ports:
    - protocol: TCP
      port: 3306
